--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,38 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif8266@2.2.3
-board = d1_mini_lite
+[platformio]
+default_envs = d1_mini_lite
+
+[common]
+platform = espressif8266@2.6.2
 framework = arduino
-lib_deps = PubSubClient@2.7
+build_flags = -Iprivate -Iconfig 
+              -DDEBUG_ENABLED -D PIOENV=\"$PIOENV\" 
+              -D PIOPLATFORM=\"$PIOPLATFORM\" 
+              -D PIOFRAMEWORK=\"$PIOFRAMEWORK\"
 
-upload_speed = 460800
+lib_deps = PubSubClient@2.8
 monitor_speed = 115200
+upload_speed = 230400
 
-upload_protocol = espota
-upload_port = 192.168.5.52
-upload_flags = --auth=otapass
+[env:d1_mini]
+board = d1_mini
+platform = ${common.platform}
+framework = ${common.framework}
+build_flags = ${common.build_flags} -DWIFI_LED=13
+lib_deps = ${common.lib_deps}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+
+; Verbaute Hardware
+[env:d1_mini_lite]
+board = d1_mini_lite
+platform = ${common.platform}
+framework = ${common.framework}
+build_flags = ${common.build_flags} -DWIFI_LED=13
+lib_deps = ${common.lib_deps}
+monitor_speed = ${common.monitor_speed}
+upload_speed = ${common.upload_speed}
+upload_port = dummy
+upload_command = ./private/upload-d1_mini_lite.sh
