--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,9 @@
 
 # Private directory
 private/
-lib/App/App.hpp
 
 # Visual Studio Code
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_prop*
-.vscode/launch.json
-.vscode/settings.json
-.vscode/ipch
+.vscode
 
 # Prerequisites
 *.d
