--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = d1_mini_lite
+default_envs = d1_mini
 
 [common]
 platform = espressif8266@2.6.2
 framework = arduino
-build_flags = -Iprivate -Iconfig 
+build_flags = -Iinclude
               -DDEBUG_ENABLED -D PIOENV=\"$PIOENV\" 
               -D PIOPLATFORM=\"$PIOPLATFORM\" 
               -D PIOFRAMEWORK=\"$PIOFRAMEWORK\"
