--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = d1_mini
+default_envs = d1_mini_lite
 
 [common]
 platform = espressif8266@2.6.2
@@ -41,5 +41,5 @@ build_flags = ${common.build_flags} -DWIFI_LED=13
 lib_deps = ${common.lib_deps}
 monitor_speed = ${common.monitor_speed}
 upload_speed = ${common.upload_speed}
-upload_port = dummy
-upload_command = ./private/upload-d1_mini_lite.sh
+; upload_port = dummy
+; upload_command = ./private/upload-d1_mini_lite.sh
